--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -29,14 +29,9 @@
 		@media (min-width: $md5) {
 			flex: 0 0 calc(50% - 16px);
 		}
-		&:last-child {
-			flex: 0 0 100%;
-		}
+
 		@media (min-width: $md3) {
 			flex: 0 1 auto;
-			&:last-child {
-				flex: 0 1 auto;
-			}
 		}
 	}
 	// .footer__menu-caption
@@ -73,7 +68,7 @@
 	&__menu-link {
 		position: relative;
 		font-weight: 500;
-		border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
+
 		font-size: 18px;
 		overflow: hidden;
 		display: inline-block;
@@ -81,6 +76,9 @@
 		& span {
 			transition: transform 0.15s ease;
 			display: inline-block;
+			text-decoration: underline;
+			text-underline-offset: 4px;
+			text-decoration-color: rgba($color: #000000, $alpha: 0.1);
 		}
 		&::before {
 			content: attr(data-title);
@@ -94,9 +92,9 @@
 		}
 		@media (any-hover: hover) {
 			&:hover {
-				border-color: transparent;
 				& span {
 					transform: translateY(-150%);
+					text-decoration: none;
 				}
 				&::before {
 					transform: none;
